--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -158,17 +158,16 @@ Manage model inventory fields
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/inventory-model-custom-fields" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .half .auto-collapse-10}
+:::: {.slideover--l .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Add an inventory field**
 :::
 
-1. Under Models, select **Model Inventory Fields**.
-2. Click **{{< fa plus >}} Add New Field**.
-3. Select the field [type]{.smallcaps}, enter a [name]{.smallcaps}, and a [description]{.smallcaps}.
-4. Click **Save** to add your field.
+1. Click **{{< fa plus >}} Add Field**.
+2. Select the field [type]{.smallcaps}, enter a [name]{.smallcaps}, and a [description]{.smallcaps}.
+3. Click **Save** to add your field.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -216,14 +215,12 @@ Please note that the stock **Model Developer**, **Model Owner**, and **Model Val
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/stakeholders" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
 **Add a model stakeholder type**
 :::
-
-Under Models, select **Model Stakeholder Types**:
 
 1. Click **{{< fa plus >}} Add New Stakeholder Type**.
 2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the stakeholder type.
@@ -275,14 +272,12 @@ Working with templates
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/templates" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
 **Duplicate a template**
 :::
-
-Under Documents, select **Templates**:
 
 1. Select one of the tabs for the type of template you want to duplicate. For example: **Documentation**
 2. Select the template to duplicate. For example: **Binary classification**
@@ -315,14 +310,12 @@ Customize documentation templates
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/templates" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
 **Customize a template**
 :::
-
-Under Documents, select **Templates**:
 
 1. Select one of the tabs for the type of template you want to edit. For example: **Documentation**
 2. Select the template to edit. For example, the duplicate you created earlier: **Copy of Binary classification**
@@ -379,30 +372,29 @@ Private blocks can be modified by any user role and are unique to that user.
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/block-library" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Add a shared text block**
 :::
 
-1. Under Documents, select **Block Library**.
-2. Click **Add New Block** and enter in the details for your text block.
-3. Select the following **[sharing]{.smallcaps}** option: **Shared**
-4. Click **Add Block** to save your text block.
+1. Click **Add New Block** and enter in the details for your text block.
+2. Select the following **[sharing]{.smallcaps}** option: **Shared**
+3. Click **Add Block** to save your text block.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/block-library" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Duplicate a text block for private use**
 :::
 
-1. Under Documents, select **Block Library** and click the **Shared Blocks** tab.
+1. Click the **Shared Blocks** tab.
 2. To the right of the text block you created earlier, click **{{< fa ellipsis-vertical >}}** and select **Duplicate Text Block**.
 3. Make your changes to the details of the block, and select the following **[sharing]{.smallcaps}** option: **Private**
 4. Click **Duplicate Block** to save a private copy of the text block.
