--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -147,38 +147,35 @@ Get your organization ready for use by first defining business units and use cas
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/organization" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .half .auto-collapse-10}
+:::: {.slideover--r .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Add a business unit**
 :::
 
-1. Under Workspace, select **Organization**.
-2. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
-3. Enter in your **[business unit name]{.smallcaps}**.
-4. Click **{{< fa plus >}} Add Business Unit** to save your changes.
+1. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
+2. Enter in your **[business unit name]{.smallcaps}**.
+3. Click **{{< fa plus >}} Add Business Unit** to save your changes.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/organization" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .half .auto-collapse-10}
+:::: {.slideover--l .auto-collapse-10}
 ::: {.tc}
 **Add a use case**
 :::
 
-1. Under Workspace, select **Organization**.
-2. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
-3. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
-4. Click **{{< fa plus >}} Add Use Case** to save your changes.
+1. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
+2. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
+3. Click **{{< fa plus >}} Add Use Case** to save your changes.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
 
 ## {.scrollable}
 
@@ -213,14 +210,12 @@ Next, define your risk areas and validation guidelines:
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/risk-areas" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Add a risk area & validation guideline**
 :::
-
-Under Workspace, select **Risk Areas & Validation Guidelines**:
 
 1. Click **{{< fa plus >}} Add Risk Area**.
 2. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
@@ -259,14 +254,12 @@ Manage user groups
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/groups" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Add a user group**
 :::
-
-Under User Permissions, select **Groups**:
 
 1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
 2. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
@@ -310,14 +303,12 @@ Manage user roles
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/roles" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
 **Create role & assign permissions**
 :::
-
-Under User Permissions, select **Roles**:
 
 1. Click **{{< fa plus >}} Add New Role**.
 2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.
@@ -354,15 +345,14 @@ In addition to assigning permissions via individual user roles, you can add role
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/permissions" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
 **Modify global permissions**
 :::
 
-1. Under User Permissions, select **Permissions**.
-2. **Add the role you created earlier** to a specific permission by clicking **{{< fa plus >}}**, then selecting the permission from the drop-down menu.
+1. **Add the role you created earlier** to a specific permission by clicking **{{< fa plus >}}**, then selecting the permission from the drop-down menu.
 2. **Remove the role you created earlier** from a specific permission by clicking **{{< fa x >}}** next to the role.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -403,18 +393,15 @@ Once you've set up the basics, grant users access to the {{< var validmind.platf
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/invitation" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--r .auto-collapse-10}
+:::: {.slideover--l .three-quarters .auto-collapse-10}
 **Invite a new user**
 
-1. Under User Permissions, click **Invite New Users**.
-2. Enter in the details under Invite by Email:
-
-- **Group** — The group you created earlier.
-- **Role** — The role you created earlier.
-
-3. Click **{{< fa envelope >}} Send Invite**.
+1. Enter in the details under Invite by Email:
+  - **Group** — The group you created earlier.
+  - **Role** — The role you created earlier.
+2. Click **{{< fa envelope >}} Send Invite**.
 
 ::: {.embed}
 **Tip:** Try inviting yourself! Add **+1** to your email handle (**handle+1@your-company.com**) and accept the invitation.
@@ -462,14 +449,12 @@ After granting access to your users, you can adjust their roles as needed:
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/roles" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Modify a role's users**
 :::
-
-Under User Permissions, select **Roles**:
 
 1. **Click on the role you created earlier** and select the **Users** tab.
 2. **For the user you invited earlier,** click **{{< fa plus >}}** to open the Assign Roles menu.
