--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -168,15 +168,14 @@ Manage model stages
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/statuses" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Add a model stage**
 :::
 
-1. Under Models, select **Model Stages**.
-2. Click **{{< fa plus >}} Add Model Stage**.
+1. Click **{{< fa plus >}} Add Model Stage**.
 2. On the Add New Model Stage modal that appears:
     a. Provide a stage **[name]{.smallcaps}**
     b. Provide a stage **[description]{.smallcaps}**
@@ -235,42 +234,40 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 :::
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/workflows" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
 **Add a model workflow**
 :::
 
-1. Under Workspace, select **Workflows**.
-2. Click **{{< fa plus >}} Add Workflow**.
-3. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
-4. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated.
-5. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow.
-6. Click **Add Workflow** to save your blank workflow.
+1. Click **{{< fa plus >}} Add Workflow**.
+2. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
+3. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated.
+4. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow.
+5. Click **Add Workflow** to save your blank workflow.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/workflows" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--l .auto-collapse-10}
+:::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
 **Configure & link workflow steps**
 :::
 
-1. Under Workspace, select **Workflows**.
-2. Click on the workflow you'd added earlier, then:
+1. Click on the workflow you'd added earlier, then:
   - To add a step, drag and drop a new step onto the canvas.
   - Double-click the new step to open up the configuration modal.
-3. After you're finished with step configuration, click **Update Step** to apply your changes.
-4. After you've configured a step, link your workflow together:
+2. After you're finished with step configuration, click **Update Step** to apply your changes.
+3. After you've configured a step, link your workflow together:
   - Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
   - Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the step you added previously.
-5. Designate the end of your workflow by dragging an **{{< fa circle-stop >}} End** step onto the canvas.
-6. Link your previous step to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of that step, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
-7. Click **Save Workflow** to apply your changes.
+4. Designate the end of your workflow by dragging an **{{< fa circle-stop >}} End** step onto the canvas.
+5. Link your previous step to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of that step, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
+6. Click **Save Workflow** to apply your changes.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
