--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -3,7 +3,7 @@
 
 1. Under Models, select **Model Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
 
-    - To add a new field, click **{{< fa plus >}} Add New Field**. 
+    - To add a new field, click **{{< fa plus >}} Add Field**. 
     - To edit an existing field, select **{{< fa pencil >}} Edit** under the Actions column for the desired field.
 
 1. Fields require a [type]{.smallcaps},^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
@@ -33,7 +33,7 @@
 
 1. Under Models, select **Model Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
 
-    - To add a new field, click **{{< fa plus >}} Add New Field**. 
+    - To add a new field, click **{{< fa plus >}} Add Field**. 
     - To edit an existing field, select **{{< fa pencil >}} Edit** under the Actions column for the desired field.
 
 1. Fields require a [type]{.smallcaps}, a [name]{.smallcaps}, and a [description]{.smallcaps}.
