--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -24,23 +24,7 @@ Review workflows associated with your models, and initiate or abort workflows co
 
 ### Review workflow history
 
-Review a timeline of workflows running or previously run on your model:
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^4]
-
-3. On the landing page of your model, locate the Workflows section. If workflows are running or have previously run on your model, you can:
-
-    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
-
-    - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
-        - **Active** — Workflows currently running.
-        - **Scheduled** — Workflows slated to run in the future.
-        - **Waiting** — Workflows in a {{< fa clock >}} Wait state.[^5]
-        - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.[^6]
-        - **Aborted** — Cancelled workflows.[^7]
-        - **Available** — Workflows available to be run manually.[^8]
+{{< include /guide/model-workflows/_review-workflow-history.qmd >}}
 
 ## Initiate model workflows
 
@@ -48,11 +32,11 @@ Review a timeline of workflows running or previously run on your model:
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manually start model workflows.
 :::
 
-To manually start a workflow[^9] for a specific model:
+To manually start a workflow[^4] for a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^10]
+2. Select a model or find your model by applying a filter or searching for it.[^5]
 
 3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -67,11 +51,11 @@ To manually start a workflow[^9] for a specific model:
 
 ### Resume workflows
 
-To manually resume a workflow in a {{< fa clock >}} Wait state:[^11]
+To manually resume a workflow in a {{< fa clock >}} Wait state:[^6]
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^12]
+2. Select a model or find your model by applying a filter or searching for it.[^7]
 
 3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -89,7 +73,7 @@ To cancel a run of a workflow on a model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^13]
+2. Select a model or find your model by applying a filter or searching for it.[^8]
 
 3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -108,26 +92,16 @@ To cancel a run of a workflow on a model:
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^5]: [Conditional requirements](setting-up-model-workflows.qmd#conditional-requirements)
-
-[^6]: [Workflow step types](setting-up-model-workflows.qmd#workflow-step-types)
-
-[^7]: [Abort workflows](#abort-workflows)
-
-[^8]: [Initiate model workflows](#initiate-model-workflows)
-
-[^9]:
+[^4]:
 
     ::: {.callout title="Workflows can be set to run automatically on specific triggers."}
     Refer to [Configure custom workflows](configure-model-workflows.qmd) for more details.
     :::
 
-[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^11]: [Conditional requirements](setting-up-model-workflows.qmd#conditional-requirements)
+[^6]: [Conditional requirements](setting-up-model-workflows.qmd#conditional-requirements)
 
-[^12]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^13]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^8]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
