--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -99,6 +99,42 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 {{< include /training/common-slides/_review-model-activity.qmd >}}
 
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Review model workflows
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/model-workflows/manage-model-workflows.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f4}
+
+Review workflows associated with your models:
+
+::: {.panel-tabset}
+### Review active workflows
+
+{{< include /guide/model-workflows/_review-active-workflows.qmd >}}
+
+### Review workflow history
+
+{{< include /guide/model-workflows/_review-workflow-history.qmd >}}
+
+:::
+
+:::
+::::
+
 # Working with analytics {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
