--- a/site/guide/model-workflows/_review-active-workflows.qmd
+++ b/site/guide/model-workflows/_review-active-workflows.qmd
@@ -27,7 +27,7 @@ To review the details for workflows currently active on a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-1. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models).
+1. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
 1. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
