--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -135,6 +135,23 @@ Review workflows associated with your models:
 :::
 ::::
 
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Review model workflows**
+:::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
+3. Click on the name of any active workflow to review that specific workflow's details.
+4. Close the detail view for your workflow.
+5. Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
 # Working with analytics {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
