--- a/site/guide/model-workflows/_review-workflow-history.qmd
+++ b/site/guide/model-workflows/_review-workflow-history.qmd
@@ -26,7 +26,7 @@ Review a timeline of workflows running or previously run on your model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models).
+2. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
 3. On the landing page of your model, locate the Workflows section. If workflows are running or have previously run on your model, you can:
 
@@ -35,9 +35,9 @@ Review a timeline of workflows running or previously run on your model:
     - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
         - **Active** — Workflows currently running.
         - **Scheduled** — Workflows slated to run in the future.
-        - **Waiting** — Workflows in a [{{< fa clock >}} Wait state](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements).
-        - **Finished** — Workflows that have reached an [{{< fa circle-stop >}} End state](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types).
-        - **Aborted** — [Cancelled workflows.](/guide/model-workflows/manage-model-workflows.qmd#abort-workflows)
-        - **Available** — Workflows available to be [run manually](/guide/model-workflows/manage-model-workflows.qmd#initiate-model-workflows).
+        - **Waiting** — Workflows in a [{{< fa clock >}} Wait state](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements){target="_blank"}.
+        - **Finished** — Workflows that have reached an [{{< fa circle-stop >}} End state](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types{target="_blank"}).
+        - **Aborted** — [Cancelled workflows.](/guide/model-workflows/manage-model-workflows.qmd#abort-workflows){target="_blank"}
+        - **Available** — Workflows available to be [run manually](/guide/model-workflows/manage-model-workflows.qmd#initiate-model-workflows){target="_blank"}.
 
 ::::
