--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -139,7 +139,7 @@ Review workflows associated with your models:
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Review model workflows**
+**View model workflows**
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
