--- a/site/guide/model-workflows/_review-workflow-history.qmd
+++ b/site/guide/model-workflows/_review-workflow-history.qmd
@@ -36,7 +36,7 @@ Review a timeline of workflows running or previously run on your model:
         - **Active** — Workflows currently running.
         - **Scheduled** — Workflows slated to run in the future.
         - **Waiting** — Workflows in a [{{< fa clock >}} Wait state](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements){target="_blank"}.
-        - **Finished** — Workflows that have reached an [{{< fa circle-stop >}} End state](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types{target="_blank"}).
+        - **Finished** — Workflows that have reached an [{{< fa circle-stop >}} End state](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types){target="_blank"}.
         - **Aborted** — [Cancelled workflows.](/guide/model-workflows/manage-model-workflows.qmd#abort-workflows){target="_blank"}
         - **Available** — Workflows available to be [run manually](/guide/model-workflows/manage-model-workflows.qmd#initiate-model-workflows){target="_blank"}.
 
