--- a/site/guide/configuration/register-with-validmind.qmd
+++ b/site/guide/configuration/register-with-validmind.qmd
@@ -21,16 +21,15 @@ With an email address or a Google,[^1] GitHub,[^2] or Microsoft[^3] account, you
 - [x] Additionally, an email address that is able to receive messages from {{< var vm.product >}}.[^4]
 
 ::: {.callout}
-For all users, it is required that someone with the Customer Admin role[^5] invite you to your organization.
+ValidMind access is invite-only. To use the platform, your organization must already have a ValidMind account, and you must be invited by someone with the Customer Admin role[^5].
 :::
 
 :::
-[^5]: [Manage roles](manage-roles.qmd)
 
-## Accept an invite 
+## Accepting an invite 
 
 ::: {.callout title="This method will allow you to register as user linked to your institution's existing organization."}
-These steps require that you have been invited[^12] by a Customer Admin user to join your organization on {{< var vm.product >}}.
+These steps require that you have been invited[^6] by a Customer Admin user to join your organization on {{< var vm.product >}}.
 :::
 
 1. Check the email inbox for the address you provided your organization to be associated with {{< var vm.product >}} for the following email:
@@ -90,9 +89,9 @@ b. `validmind.com`
 
 6. Click **<u>Confirm my account</u>** to gain full access to {{< var vm.product >}}.
 
-7. Return to the main {{< var vm.product >}} dashboard[^13] by clicking on **Back to {{< var vm.product >}}**. 
+7. Return to the main {{< var vm.product >}} dashboard[^7] by clicking on **Back to {{< var vm.product >}}**. 
     
-    Sample models[^14] are populated for you in this new organization to demonstrate the usage of {{< var vm.product >}}.
+    Sample models[^8] are populated for you in this new organization to demonstrate the usage of {{< var vm.product >}}.
 
 :::: {.flex .flex-wrap .justify-around}
 ::: {.w-40-ns}
@@ -130,8 +129,8 @@ b. `validmind.com`
 [^5]: [Manage roles](manage-roles.qmd)
 
 
-[^12]: [User invitations](/guide/configuration/manage-users.qmd#user-invitations)
+[^6]: [User invitations](/guide/configuration/manage-users.qmd#user-invitations)
 
-[^13]: [Customize your dashboard](customize-your-dashboard.qmd)
+[^7]: [Customize your dashboard](customize-your-dashboard.qmd)
 
-[^14]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
+[^8]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
