--- a/site/guide/configuration/_add-model-stakeholder-types.qmd
+++ b/site/guide/configuration/_add-model-stakeholder-types.qmd
@@ -13,14 +13,14 @@
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
+a. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Models, select **Model Stakeholder Types**.
+a. Under Models, select **Model Stakeholder Types**.
 
-1. Click **{{< fa plus >}} Add New Stakeholder Type**.
+a. Click **{{< fa plus >}} Add New Stakeholder Type**.
 
-1. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the stakeholder type.
+a. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the stakeholder type.
 
-1. Once you click **{{< fa plus >}} Add Type**, you can proceed with managing the model inventory field permissions associated with that type.
+a. Once you click **{{< fa plus >}} Add Type**, you can proceed with managing the model inventory field permissions associated with that type.
 
 ::::
