--- a/site/guide/configuration/_add-roles.qmd
+++ b/site/guide/configuration/_add-roles.qmd
@@ -11,13 +11,13 @@
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
+a. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under User Permissions, select **Roles**.
+a. Under User Permissions, select **Roles**.
 
-1. Click **{{< fa plus >}} Add New Role**.
+a. Click **{{< fa plus >}} Add New Role**.
 
-1. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.
+a. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.
 
-1. Once you click **{{< fa plus >}} Add Role**, you can proceed with managing the user permissions and users associated with that role.
+a. Once you click **{{< fa plus >}} Add Role**, you can proceed with managing the user permissions and users associated with that role.
 ::::
