--- a/site/guide/configuration/manage-roles.qmd
+++ b/site/guide/configuration/manage-roles.qmd
@@ -35,7 +35,9 @@ Please note that the [{{< fa hand >}} Customer Admin]{.bubble} role has the high
 
 #### Delete role from user
 
-{{< include _delete-role-from-user.qmd >}}
+a. Click **{{< fa x >}}** to delete a role from a user.
+
+a. Once you confirm, that role will be removed from the user.
 
 :::
 
