--- a/site/guide/model-validation/_add-finding-via-overview.qmd
+++ b/site/guide/model-validation/_add-finding-via-overview.qmd
@@ -23,9 +23,9 @@ a. When you are done, click **Save** to submit the finding.
 :::: {.content-hidden unless-format="revealjs"}
 To log a finding from the documentation overview: 
 
-1. On your model's **{{< fa book-open >}} Documentation** page, click **{{< fa plus >}} Add Finding**.
+a. On your model's **{{< fa book-open >}} Documentation** page, click **{{< fa plus >}} Add Finding**.
 
-1. On the **Add Model Finding** modal that opens, provide information for: 
+a. On the **Add Model Finding** modal that opens, provide information for: 
 
    - Title
    - Risk area
@@ -35,7 +35,7 @@ To log a finding from the documentation overview:
    - Documentation section
    - Description
 
-1. When you are done, click **Save** to submit the finding. 
+a. When you are done, click **Save** to submit the finding. 
 
    Once created, you can then [add supporting documentation to your finding](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation){target="_blank"}.
 
