--- a/site/guide/model-validation/_add-risk-areas.qmd
+++ b/site/guide/model-validation/_add-risk-areas.qmd
@@ -15,11 +15,11 @@
 ::::
 
 :::: {.content-visible unless-format="revealjs"}
-1. Click **{{< fa plus >}} Add Risk Area**.
+a. Click **{{< fa plus >}} Add Risk Area**.
 
-1. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
+a. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
 
-1. Click **Add Risk Area** to create your risk area.
+a. Click **Add Risk Area** to create your risk area.
 
     After you save, confirm that your risk area was added to the list in alphabetical order.
 
