--- a/site/guide/model-workflows/_configure-workflow-steps.qmd
+++ b/site/guide/model-workflows/_configure-workflow-steps.qmd
@@ -24,18 +24,18 @@ Refer to [Setting up model workflows](/guide/model-workflows/setting-up-model-wo
 :::: {.content-hidden unless-format="revealjs"}
 To add or edit workflow steps:
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
+a. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workspace, select **Workflows**.
+a. Under Workspace, select **Workflows**.
 
-1. Click on the workflow you'd like to modify, then:
+a. Click on the workflow you'd like to modify, then:
 
     - To add a step, drag and drop a new step onto the canvas.
     - Double-click the new step to open up the configuration modal.
 
-1. After you're finished with step configuration, click **Update Step** to apply your changes.
+a. After you're finished with step configuration, click **Update Step** to apply your changes.
 
-1. After you've configured a step, you can then link your workflow together.
+a. After you've configured a step, you can then link your workflow together.
 
 ::::
 
