--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -173,11 +173,25 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .three-quarters .auto-collapse-10}
+::: {.tc}
+**View model inventory field**
+:::
+
+1. Select the name of your model you registered earlier to open up the model details page.
+2. On the landing page of your model, confirm that the new field that you added is present.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
 ## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Mange model stakeholder types
+Manage model stakeholder types
 
 ::: {.tc}
 [Learn more ...](/guide/configuration/manage-model-stakeholder-types.qmd){.button target="_blank"}
