--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -433,17 +433,9 @@ After granting access to your users, you can adjust their roles as needed:
 
 {{< include /guide/configuration/_manage-role-users.qmd >}}
 
-::: {.panel-tabset}
-
-### Add role to user
+#### Add role to user
 
 {{< include /guide/configuration/_add-role-to-user.qmd >}}
-
-### Delete role from user
-
-{{< include /guide/configuration/_delete-role-from-user.qmd >}}
-
-:::
 
 :::
 
@@ -460,7 +452,6 @@ After granting access to your users, you can adjust their roles as needed:
 2. **For the user you invited earlier,** click **{{< fa plus >}}** to open the Assign Roles menu.
 3. Click **{{< fa plus >}}** next to the role for each role to be assigned.
 4. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
-5. Click **{{< fa x >}}** to delete a role from a user.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
