--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -158,8 +158,7 @@ Manage model stages
 
 {{< include /guide/model-workflows/_configure-model-stages.qmd >}}
 
-
-### Add model stages
+#### Add model stages
 
 {{< include /guide/model-workflows/_add-model-stages.qmd >}}
 
