--- a/site/training/common-slides/_track-changes-updates.qmd
+++ b/site/training/common-slides/_track-changes-updates.qmd
@@ -12,7 +12,7 @@ Track changes & updates
 :::
 
 ::: {.column width="70%" .bl .pl4 .f4}
-### View model activity
+#### View model activity
 
 {{< include /guide/model-inventory/_view-model-activity-overview.qmd >}}
 
