--- a/site/guide/configuration/_manage-role-permissions.qmd
+++ b/site/guide/configuration/_manage-role-permissions.qmd
@@ -16,16 +16,16 @@
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-1. Click on the role whose user permissions you want to change.
+a. Click on the role whose user permissions you want to change.
 
-1. Select the **Permissions** tab, where you can: 
+a. Select the **Permissions** tab, where you can: 
 
       - View the current user permissions assigned to that role.
       - Select user permissions to be assigned to that role.
 
-1. Select **Edit Permissions** to to add or remove user permissions to or from that role. 
+a. Select **Edit Permissions** to to add or remove user permissions to or from that role. 
 
-1. Toggle specific user permissions for that role by checking or unchecking the boxes next to the permission. 
+a. Toggle specific user permissions for that role by checking or unchecking the boxes next to the permission. 
 
-1. Click **Save Permissions** to apply your changes. 
+a. Click **Save Permissions** to apply your changes. 
 ::::
