--- a/site/guide/model-validation/_add-finding-via-section.qmd
+++ b/site/guide/model-validation/_add-finding-via-section.qmd
@@ -29,11 +29,11 @@ a. When you are done, click **Save** to submit the finding.
 :::: {.content-hidden unless-format="revealjs"}
 While working within a section of your documentation, you can easily log a finding associated with that section without leaving the page:
 
-1. Click on **{{< var vm.product >}} Insights™** to expand the insight panel.
+a. Click on **{{< var vm.product >}} Insights™** to expand the insight panel.
 
-1. For the section you want to add a Finding for, click **{{< fa triangle-exclamation >}}  Add Finding** beneath the Documentation Guidelines.
+a. For the section you want to add a Finding for, click **{{< fa triangle-exclamation >}}  Add Finding** beneath the Documentation Guidelines.
 
-1. On the **Add Model Finding** modal that opens, provide information for: 
+a. On the **Add Model Finding** modal that opens, provide information for: 
 
    - Title
    - Risk area
@@ -45,7 +45,7 @@ While working within a section of your documentation, you can easily log a findi
    
    The documentation section will be auto-populated with the section you are working from — you are able to select another section if desired.
 
-1. When you are done, click **Save** to submit the finding. 
+a. When you are done, click **Save** to submit the finding. 
 
    Once created, you can then [add supporting documentation to your finding](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation){target="_blank"}.
 
