--- a/site/guide/model-validation/_add-validation-guidelines.qmd
+++ b/site/guide/model-validation/_add-validation-guidelines.qmd
@@ -17,13 +17,13 @@
 ::::
 
 :::: {.content-visible unless-format="revealjs"}
-1. Hover over the risk area you want to add a guideline to until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+a. Hover over the risk area you want to add a guideline to until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
 
-1. Select **{{< fa plus >}} Add Guideline**.
+a. Select **{{< fa plus >}} Add Guideline**.
 
-1. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
+a. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
 
-1. Click **Add Guideline** to insert your guideline to that risk area.
+a. Click **Add Guideline** to insert your guideline to that risk area.
 
     After you save, confirm that your guideline was added to your risk area in alphabetical order.
 ::::
