--- a/site/guide/model-workflows/_add-new-workflows.qmd
+++ b/site/guide/model-workflows/_add-new-workflows.qmd
@@ -33,22 +33,22 @@ To add a new blank workflow:
 :::: {.content-hidden unless-format="revealjs"}
 To add a new blank workflow:
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
+a. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workspace, select **Workflows**.
+a. Under Workspace, select **Workflows**.
 
-1. Click **{{< fa plus >}} Add Workflow**.
+a. Click **{{< fa plus >}} Add Workflow**.
 
-1. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
+a. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
 
-1. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
+a. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
 
     - **Manually** — [Start this workflow manually.](/guide/model-workflows/manage-model-workflows.qmd#initiate-model-workflows){target="_blank"}
     - **On Model Registration** — Start this workflow when a model is [registered in your model inventory](/guide/model-inventory/register-models-in-inventory.qmd){target="_blank"}.
     - **On Model Field Change** — Start this workflow on a change to a [specific model inventory field](/guide/model-inventory/edit-model-inventory-fields.qmd){target="_blank"}.
 
-1. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
+a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
-1. Click **Add Workflow** to save your blank workflow, and then configure your workflow steps.
+a. Click **Add Workflow** to save your blank workflow, and then configure your workflow steps.
 
 ::::
