--- a/site/guide/model-workflows/_link-workflow-together.qmd
+++ b/site/guide/model-workflows/_link-workflow-together.qmd
@@ -59,11 +59,11 @@ When all your workflow steps have been linked together:
 
 To initiate the beginning of your workflow:
 
-1. Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
+a. Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
 
-1. Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the first step of your workflow.
+a. Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the first step of your workflow.
 
-1. Continue with linking the rest your steps together.
+a. Continue with linking the rest your steps together.
 
 #### Link steps together
 
@@ -76,10 +76,10 @@ To link subsequent steps together:
 
 When all your workflow steps have been linked together:
 
-1. Designate the end of your workflow by dragging an **{{< fa circle-stop >}} End** step onto the canvas.
+a. Designate the end of your workflow by dragging an **{{< fa circle-stop >}} End** step onto the canvas.
 
-1. Link relevant previous steps to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of those steps, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
+a. Link relevant previous steps to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of those steps, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
 
-1. When you are finished configuring your workflow, click **Save Workflow** to apply your changes.
+a. When you are finished configuring your workflow, click **Save Workflow** to apply your changes.
 
 ::::
