--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -306,19 +306,19 @@ While the example below focuses on a specific test result, you can follow the sa
 ::: {.panel-tabset}
 
 ### 1. Link data quality test results
-1. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
+a. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
 
-2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+b. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 
-3. Locate the Data Preparation section and click on **2.2.1. Data Quality** to expand that section.
+c. Locate the Data Preparation section and click on **2.2.1. Data Quality** to expand that section.
 
-4. Under the Class Imbalance Assessment section, locate Validator Evidence then click **Link Evidence to Report**.
+d. Under the Class Imbalance Assessment section, locate Validator Evidence then click **Link Evidence to Report**.
 
-5. Select the Class Imbalance test results we logged: **ValidMind Data Validation Class Imbalance** 
+e. Select the Class Imbalance test results we logged: **ValidMind Data Validation Class Imbalance** 
 
     ![The ClassImbalance tests selected](/notebooks/tutorials/model_validation/selecting-class-imbalance-results.png){fig-alt="Screenshot showing the ClassImbalance tests selected" .screenshot}
 
-6. Click **Update Linked Evidence** to add the test results to the validation report.
+f. Click **Update Linked Evidence** to add the test results to the validation report.
 
     Confirm that the results for the Class Imbalance test you inserted has been correctly inserted into section **2.2.1. Data Quality** of the report.
 
