--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -122,7 +122,7 @@ Review test results
 
 {{< include /guide/model-documentation/_test-result-metadata.qmd >}}
 
-### View test result metadata
+#### View test result metadata
 
 From the {{< var validmind.platform >}}:
 
