--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -99,7 +99,7 @@ You will need to have already completed **1 — Set up the {{< var validmind.dev
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-### {{< var vm.product >}} for model development
+#### {{< var vm.product >}} for model development
 
 Our series of four introductory notebooks for model developers include sample code and how-to information to get you started with {{< var vm.product >}}:
 
@@ -283,7 +283,7 @@ Work with test results
 :::
 
 ::: {.column width="70%" .bl .pl4 .f4}
-### Add individual test results to model documentation
+#### Add individual test results to model documentation
 
 With the test results logged, let's head to the model we connected to at the beginning of this notebook and insert our test results into the documentation:
 
