--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -92,7 +92,7 @@ These notebooks walk you through how to validate a model using {{< var vm.produc
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-### {{< var vm.product >}} for model validation
+#### {{< var vm.product >}} for model validation
 
 Our series of four introductory notebooks for model validators include sample code and how-to information to get you started with {{< var vm.product >}}:
 
