--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -134,7 +134,7 @@ You will need to have already completed notebooks **1** and **2** during the fir
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-### {{< var vm.product >}} for model development
+#### {{< var vm.product >}} for model development
 
 Our series of four introductory notebooks for model developers include sample code and how-to information to get you started with {{< var vm.product >}}:
 
@@ -260,7 +260,7 @@ Reusable custom tests
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-### External test providers
+#### External test providers
 
 Creating inline custom tests with a function is a great way to customize your model documentation.
 
@@ -332,7 +332,7 @@ Custom test results
 :::
 
 ::: {.column width="70%" .bl .pl4 .f4}
-### Add test results to model documentation
+#### Add test results to model documentation
 
 With the custom test results logged, let's head to the model we connected to at the beginning of this notebook and insert our test results into the documentation:
 
@@ -456,7 +456,7 @@ Documentation template configuration
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-### `get_default_config()`
+#### `get_default_config()`
 
 The utility function `vm.get_test_suite().get_default_config()` will return the default configuration for the entire documentation template as a dictionary:
 
