--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -90,7 +90,7 @@ When you run these notebooks, they will generate a draft of model documentation 
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-### {{< var vm.product >}} for model development
+#### {{< var vm.product >}} for model development
 
 Our series of four introductory notebooks for model developers include sample code and how-to information to get you started with {{< var vm.product >}}:
 
