--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -99,7 +99,7 @@ You will need to have already completed **1 — Set up the {{< var validmind.dev
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-### {{< var vm.product >}} for model validation
+#### {{< var vm.product >}} for model validation
 
 Our series of four introductory notebooks for model validators include sample code and how-to information to get you started with {{< var vm.product >}}:
 
@@ -297,7 +297,7 @@ Add test results to reporting
 :::
 
 ::: {.column width="70%" .bl .pl4 .f4}
-### Link validator evidence
+#### Link validator evidence
 
 With some test results logged, let's head to the model we connected to at the beginning of this notebook and insert our test results into the validation report as evidence.
 
