Removing old admin training

--- a/site/about/contributing/style-guide/conventions.qmd
+++ b/site/about/contributing/style-guide/conventions.qmd
@@ -409,51 +409,16 @@ The {{< var validmind.training >}}[^22] is delivered in Revealjs presentation fo
 
 | Correct | Incorrect | 
 |------|-----|
-|   `/training/administrator-training/administrator-fundamentals.qmd`  |  `/training/administrator-fundamentals/administrator-fundamentals.qmd`  |
+|   `/training/administrator-fundamentations/`  |  `/training/administrator-training-course-1`  |
 : **Training subdirectory** examples {.hover}
 
 #### Course registration
 
-- Course registration pages outline what the course covers and how to sign up for the course.
-- Registration pages make use of our custom `.preview` extension[^29] to display the tile card for the course. These previews act like links but they provide a live preview of the page linked to. 
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-40-ns}
-
-Then reference the file to embed within the body of the page: 
-
-```markdown
-::: {.preview source="/training/administrator-fundamentals/administrator-fundamentals.qmd"}
-:::
-```
-
-:::
-
-::: {.w-50-ns}
-
-::: {.preview source="/training/administrator-fundamentals/administrator-fundamentals.qmd"}
-:::
-
-:::
-
-::::
-
-::: {.column-margin}
-Optional
-: Specify a different `target` for the preview to preview a training course but link to the registration page, for example:
-
-```markdown
-::: {.preview source="administrator-fundamentals.qmd" target="administrator-fundamentals-register.qmd"}
-:::
-```
-:::
-
-![Example of a course registration page](course-registration-page.png){fig-alt="A screenshot showing an example of a course registration page" .screenshot width=80%} 
+Course registration pages outline what the course covers and how to sign up for the course.
 
 #### Course slides
 
-- Training slides make use of Tachyons CSS[^30] styled with our custom `.overlay` class to provide demonstration overlays.
+- Training slides make use of Tachyons CSS[^29] styled with our custom `.overlay` class to provide demonstration overlays.
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -534,21 +499,21 @@ lightbox: true
 
 [^20]: [Code samples](/developer/samples-jupyter-notebooks.qmd)
 
-[^21]: [{{< var validmind.training >}}](/training/training.qmd)
+[^21]: [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
 
-[^22]: **Quarto:** [Revealjs](https://quarto.org/docs/presentations/revealjs/)
+[^22]: [{{< var validmind.training >}}](/training/training.qmd)
 
-[^23]: [Course registration](#course-registration)
+[^23]: **Quarto:** [Revealjs](https://quarto.org/docs/presentations/revealjs/)
 
-[^24]: [Course slides](#course-slides)
+[^24]: [Course registration](#course-registration)
 
-[^25]: **Quarto:** [Directory Metadata](https://quarto.org/docs/projects/quarto-projects.html#directory-metadata)
+[^25]: [Course slides](#course-slides)
 
-[^26]: **{{< var vm.product >}} GitHub:** [training.css](https://github.com/validmind/documentation/blob/main/site/training/assets/training.css)
+[^26]: **Quarto:** [Directory Metadata](https://quarto.org/docs/projects/quarto-projects.html#directory-metadata)
 
-[^27]: **{{< var vm.product >}} GitHub:** [slides.scss](https://github.com/validmind/documentation/blob/main/site/training/assets/slides.scss)
+[^27]: **{{< var vm.product >}} GitHub:** [training.css](https://github.com/validmind/documentation/blob/main/site/training/assets/training.css)
 
-[^28]: **{{< var vm.product >}} GitHub:** [preview](https://github.com/validmind/documentation/tree/main/site/_extensions/nrichers/preview) extension
+[^28]: **{{< var vm.product >}} GitHub:** [slides.scss](https://github.com/validmind/documentation/blob/main/site/training/assets/slides.scss)
 
 [^29]: **GitHub:** [Tachyons Extension For Quarto](https://github.com/nareal/tachyons)
 
